# funkfabrik-b

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: guestbook.rs  main.rs
static/: style.css  teletext.js
templates/: 100.html  101.html  300.html  404.html  666.html  777.html  777_invaders.html  777_snake.html  777_tetris.html  999.html  base.html  not_found.html
